crates/squawk_parser/src/snapshots/parser__test__alter_collation_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/alter_collation.sql
---
SOURCE_FILE
  COMMENT "-- refresh"
  WHITESPACE "\n"
  ALTER_COLLATION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    COLLATION_KW "collation"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "c"
    WHITESPACE "\n  "
    REFRESH_KW "refresh"
    WHITESPACE " "
    VERSION_KW "version"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_COLLATION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    COLLATION_KW "collation"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "c"
    WHITESPACE "\n  "
    RENAME_KW "rename"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    NAME
      IDENT "d"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- owner"
  WHITESPACE "\n"
  ALTER_COLLATION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    COLLATION_KW "collation"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "c"
    WHITESPACE "\n  "
    OWNER_KW "owner"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    IDENT "u"
  SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_COLLATION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    COLLATION_KW "collation"
    WHITESPACE " "
    PATH
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "s"
      DOT "."
      PATH_SEGMENT
        NAME_REF
          IDENT "c"
    WHITESPACE "\n  "
    OWNER_KW "owner"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    CURRENT_ROLE_KW "current_role"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_schema"
  WHITESPACE "\n"
  ALTER_COLLATION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    COLLATION_KW "collation"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "c"
    WHITESPACE "\n  "
    SET_KW "set"
    WHITESPACE " "
    SCHEMA_KW "schema"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
  SEMICOLON ";"
  WHITESPACE "\n\n"
