crates/squawk_parser/src/snapshots/parser__test__alter_conversion_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/alter_conversion.sql
---
SOURCE_FILE
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_CONVERSION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "c"
    WHITESPACE " "
    RENAME_KW "rename"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    NAME
      IDENT "n"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- owner"
  WHITESPACE "\n"
  ALTER_CONVERSION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "c"
    WHITESPACE " "
    OWNER_KW "owner"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    IDENT "u"
  SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_CONVERSION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "c"
    WHITESPACE " "
    OWNER_KW "owner"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    CURRENT_USER_KW "current_user"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_schema"
  WHITESPACE "\n"
  ALTER_CONVERSION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "c"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    SCHEMA_KW "schema"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- qualified_name"
  WHITESPACE "\n"
  ALTER_CONVERSION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    PATH
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "a"
      DOT "."
      PATH_SEGMENT
        NAME_REF
          IDENT "c"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    SCHEMA_KW "schema"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
  SEMICOLON ";"
  WHITESPACE "\n\n"
